History
=======

0.1.1 - Unreleased
------------------

- Changes for compatibility with Kotti>=0.8. These changes
  are not backward compatibel. If you want to use kotti_contactform
  with Kotti<=0.7.x then pin to 0.1.1a5.


0.1.1a5 - 2012-08-21
--------------------

- Use alembic environment of Kotti for upgrades.
- Depend on Kotti >0.7

0.1.1a4 - 2012-07-28
--------------------

- Fixed source distribution package.

0.1.1a3 - 2012-07-28
--------------------

- Changed class row to row-fluid in contact form template.
- Added Japanese translation.

0.1.1a2 - 2012-06-28
--------------------

- Fixed source distribution package.

0.1.1a1 - 2012-06-27
--------------------

- Attachment as optional setting.
- Added database migration with alembic.


0.1.0b4 - 2012-05-21
--------------------

- Changed layout.
- Added possibility for attachments.

0.1.0b3 - 2012-03-16
--------------------

- Update models to use Declarative for compatibility with Kotti >= 0.6.