@@ -14,9 +14,8 @@ from deform import Button
 from deform import ValidationFailure
 from deform.widget import FileUploadWidget
 from kotti.views.edit import ContentSchema
-from kotti.views.edit import generic_edit
-from kotti.views.edit import generic_add
-from kotti.views.util import ensure_view_selector
+from kotti.views.form import AddFormView
+from kotti.views.form import EditFormView
 from kotti.views.util import template_api
 from kotti.views.form import FileUploadTempStore
 from kotti_contactform.resources import ContactForm
@@ -38,14 +37,14 @@ class ContactFormSchema(ContentSchema):
     )
 
 
-@ensure_view_selector
-def edit_contactform(context, request):
-    return generic_edit(context, request, ContactFormSchema())
+class ContactformEditForm(EditFormView):
+    schema_factory = ContactFormSchema
 
 
-def add_contactform(context, request):
-    return generic_add(context, request, ContactFormSchema(),
-                       ContactForm, u'contactform')
+class ContactformAddForm(AddFormView):
+    schema_factory = ContactFormSchema
+    add = ContactForm
+    item_type = _(u"Contact Form")
 
 
 def mail_submission(context, request, appstruct):
@@ -131,7 +130,7 @@ def view_contactform(context, request):
 
 def includeme_edit(config):
     config.add_view(
-        edit_contactform,
+        ContactformEditForm,
         context=ContactForm,
         name='edit',
         permission='edit',
@@ -139,7 +138,7 @@ def includeme_edit(config):
     )
 
     config.add_view(
-        add_contactform,
+        ContactformAddForm,
         name=ContactForm.type_info.add_view,
         permission='add',
         renderer='kotti:templates/edit/node.pt',
