@@ -7,6 +7,7 @@ History
 - Changes for compatibility with Kotti>=0.8. These changes
   are not backward compatibel. If you want to use kotti_contactform
   with Kotti<=0.7.x then pin to 0.1.1a5.
+  - Use form classes for the form views instead of deprecated generic functions.
 
 
 0.1.1a5 - 2012-08-21
